Wed Feb 18 15:58:30 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Sat Feb 14 22:01:30 1998  Tom Yu  <tlyu@mit.edu>

	* ovsec_kadmd.c (kadm_svc_run): Fix naming of _rpc_dtablesize()
	that was missed earlier.

Fri Feb 13 21:37:28 1998  Tom Yu  <tlyu@mit.edu>

	* kadm_rpc_svc.c: Punt naughty RCS keywords.  Update header
	locations.

	* ovsec_kadmd.c: Update header locations.  Punt naughty RCS
	keywords.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Wed Jan 21 00:00:34 1998  Tom Yu  <tlyu@mit.edu>

	* schpw.c: New file.  Support for Cygnus chpw.

	* ovsec_kadmd.c: Add support for Cygnus chpw.

	* Makefile.in (OBJS): Add schpw.o.

Tue Oct 14 21:06:16 1997  Ezra Peisach  <epeisach@mit.edu>

	* server_stubs.c (CHANGEPW_SERVICE): Modify to free allocated
 	        memory in request.
		(setup_gss_names): Free memory in case of failure.
		(chrand_principal_1): Call free_server_handle for failure
		   cleanup.
	
	* ovsec_kadmd.c (main): Cleanup memory by calling acl_finish,
	 	gss_release_name, and krb5_free_context

Tue Jul  1 02:36:55 1997  Tom Yu  <tlyu@mit.edu>

	* kadm_rpc_svc.c, server_stubs.c: Add support for setv4key.

Mon Mar 31 17:42:03 1997  Barry Jaspan  <bjaspan@mit.edu>

	* kadm_rpc_svc.c, server_stubs.c: add support for setkey_principal

Tue Feb  4 20:59:31 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Wed Dec  4 15:29:30 1996  Barry Jaspan  <bjaspan@mit.edu>

	* ovsec_kadmd.c (main): fix duplicated error strings
 	[krb5-admin/234]

Tue Nov 19 16:48:50 1996  Barry Jaspan  <bjaspan@mit.edu>

	* ovsec_kadmd.c: don't syslog \n's

Wed Nov 13 14:29:34 1996  Tom Yu  <tlyu@mit.edu>

	* ovsec_kadmd.c (main): Note that krb5_defkeyname is an internal
	interface.

	* ovsec_kadmd.c (main): Revert kt_default_name changes.
