@@ -1,3 +1,11 @@
+Wed Feb 25 14:00:32 1998  Ezra Peisach  <epeisach@mit.edu>
+
+	* schpw.c (process_chpw_request): Free memory of allocated for
+	        local address.
+
+	* ovsec_kadmd.c (do_schpw): Call krb5_kt_close to free memory
+	 	allocated.
+
 Wed Feb 18 15:58:30 1998  Tom Yu  <tlyu@mit.edu>
 
 	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
